samples/_failures_safe/1761604173_e8c02a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2da939b2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2da939b2.c:163:22: error: expected ‘;’ at end of input
  163 |                 token
      |                      ^
      |                      ;
./samples/SAFE/__tmp_2da939b2.c:163:17: error: expected declaration or statement at end of input
  163 |                 token
      |                 ^~~~~
./samples/SAFE/__tmp_2da939b2.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2da939b2.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2da939b2.c:163:17: error: expected declaration or statement at end of input
